# hardwired

./: .gitignore  CLAUDE.md  IMPROVEMENTS.md  PRD-PHASE-1.md  PRD-PHASE-2.md  PRD-PHASE-3.md  PRD.md  README.md  docker-compose.test.yml  pyproject.toml
.claude/: settings.local.json
.claude/commands/: test-integration.md  test-unit.md
.github/workflows/: ci.yml
docs/providers/: README.md  custom.md  pebble.md  powerdns.md
src/hardwired/: __init__.py  _logging.py  client.py  crypto.py  exceptions.py  models.py
src/hardwired/challenges/: __init__.py  base.py  dns01.py
src/hardwired/providers/: __init__.py  base.py  pebble.py  powerdns.py  test.py
tests/: __init__.py  conftest.py
tests/fixtures/powerdns/: test-zones.sql
tests/integration/: __init__.py  test_account.py  test_authorization_deactivation.py  test_certificate.py  test_challenges.py  test_error_handling.py  test_order.py  test_powerdns_error_handling.py  test_powerdns_provider.py  test_provider.py  test_revocation.py
tests/unit/: __init__.py  test_challenges.py  test_crypto.py  test_logging.py  test_models.py  test_providers.py
