[project]
name = "hardwired"
version = "0.1.0"
description = "ACME client library for automated SSL/TLS certificate management"
readme = "README.md"
license = "LGPL-3.0-or-later"
requires-python = ">=3.13"
authors = [
    {name = "Kyle Johnson", email = "kjohnson@gnulnx.net"}
]
keywords = ["acme", "ssl", "tls", "certificate", "letsencrypt", "x509", "cryptography"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "cryptography>=43.0",
    "pydantic>=2.9",
]

[project.urls]
Homepage = "https://github.com/kylejohnson/hardwired"
Repository = "https://github.com/kylejohnson/hardwired"
Issues = "https://github.com/kylejohnson/hardwired/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "ty>=0.0.1a7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hardwired"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
